# AccelHydra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  requirements_eval.txt
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
docs/: .gitignore  api_reference.md  conf.py  config_guide.md  config_guide.rst  getting_started.md  getting_started.rst  index.md  index.rst  introduction.rst  trainer.md  trainer.rst
docs/api/: index.rst
examples/f5tts/: inference.py  train.py  train_launcher.py
examples/f5tts/configs/: basic.yaml  inference.yaml  train.yaml
examples/f5tts/data_module/: batch_sampler.py  collate_function.py  dataset.py
examples/f5tts/models/: dit.py  flow_matching.py  text_encoder.py
examples/f5tts/trainer/: f5tts_trainer.py
examples/f5tts/utils/: audio.py  config.py  flow_matching.py  general.py  tokenize.py  torch.py  vocoder.py
examples/mnist/: data.py  model.py  train.py  trainer.py
examples/mnist/configs/: basic.yaml  train.yaml
examples/star/: README.md  constants.py  inference.py  inference_multi_gpu.py  train.py
examples/star/bash_scripts/: eval.sh  infer_star_multi_gpu.sh  train_star_fm_ft.sh
examples/star/bash_scripts_star/: train_star_fm_ft.sh  train_star_fm_ft_qformer.sh
examples/star/configs/: ascend.yaml  basic.yaml  config.yaml  infer.yaml  inference.yaml  inference_delay.yaml  train.yaml  (+1 more)
examples/uniflow_audio/: audio_generation_trainer.py  modeling_uniflow_audio.py
src/accel_hydra/: __init__.py  train_entry.py  train_launcher.py
src/uniflow_audio/: app.py  audio_generation_trainer.py  constants.py  inference.py  inference_cli.py  trainer.py
tests/: test_bucket_sampler.py  test_config.py
tests/configs/: test_custom_resolver.yaml  test_interpolation.yaml  test_simple.yaml  test_with_resolver.yaml
(+226 files in other folders)
